--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
  <h4 class="my-3">四大核心議題</h4>
  <p class="text-muted">針對學校(兒童與青少年)：「交通安全緊急處置」<br>針對學校(兒童與青少年)：「肢體意外與霸凌」
  <br>針對社區(老人據點)：「老人跌倒預防與處置」
- <br>針討機關及團體職場：「職場災害預防與應對」
+ <br>針對機關及團體職場：「職場災害預防與應對」
 </p>
  </div>
  </td>
@@ -212,7 +212,7 @@
  <section class="page-section bg-light" id="portfolio">
  <div class="container">
  <div class="text-center">
- <h2 class="section-heading text-uppercase">脊髓損傷友善大使講師陣容</h2>
+ <h2 class="section-heading text-uppercase">講師陣容</h2>
  <h3 class="section-subheading text-muted"></h3>
  </div>
  <div class="row">
@@ -228,7 +228,9 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">李妙紅</div>
- <div class="ection-heading text-uppercase"><p>職場女強人<br>兩歲時得了小兒麻痺，目前以電動輪椅代步，本來內向害羞不愛說話，經過歲月的洗禮，成為擅於和人分享又愛笑的女孩。學校畢業後工作不順遂，這些挫折卻成為日後創業的養分，後來自創公司從事國際貿易，現在已經財富自由，生活重心是進行最喜歡的--旅行。
+ <div class="ection-heading text-uppercase"><p> 職場女強人
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left">兩歲時得了小兒麻痺，目前以電動輪椅代步，本來內向害羞不愛說話，經過歲月的洗禮，成為擅於和人分享又愛笑的女孩。學校畢業後工作不順遂，這些挫折卻成為日後創業的養分，後來自創公司從事國際貿易，現在已經財富自由，生活重心是進行最喜歡的--旅行。
   期待透過講座可以分享我的經驗，帶給大家正面的想法和歡樂!
 </p> </div>
  </div>
@@ -247,8 +249,10 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">陳坤宏</div>
- <div class="ection-heading text-uppercase"><p>彩繪不凡的人生<br>在38歲提親後突來的車禍，讓本來是水泥包商人生勝利組的我，一夕之間山河變色，未婚妻離開，肚裡的寶寶消失，四肢癱瘓一輩子要24小時看護照顧，在萬念俱灰時我曾想放棄人生。
-  後來體悟到要活得精采有尊嚴，唯有改變自己從正向思考出發，在一次機緣中，我學會用嘴吧咬著筆畫畫，開始展開了我逐夢的彩繪旅程。我想借由演講感謝幫助過我的人，也想告訴大家生命處處有危機，但也處處有轉機。
+ <div class="ection-heading text-uppercase"><p> 彩繪不凡的人生
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left">在38歲提親後突來的車禍，讓本來是水泥包商人生勝利組的我，一夕之間山河變色，未婚妻離開，肚裡的寶寶消失，四肢癱瘓一輩子要24小時看護照顧，在萬念俱灰時我曾想放棄人生。
+  後來體悟到要活得精采有尊嚴，唯有改變自己從正向思考出發，在一次機緣中，我學會用嘴吧咬著筆畫畫，展開了我逐夢的彩繪旅程。我想借由演講感謝幫助過我的人，也想告訴大家生命處處有危機，但也處處有轉機。
   </p> </div>
  </div>
  </div>
@@ -266,8 +270,10 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">劉建佑</div>
- <div class="ection-heading text-uppercase"><p> 輪椅廚神<br> 我的興趣是烹飪，高職時參加選手培育班，替學校拿了不錯的成績。在我即將步入職場時突然的車禍，把我餐飲主廚的夢想就此打碎。在基金會社工及醫訪員的鼓勵下，參加講師培訓的課程，感謝「啟程管理顧問公司」三位老師嚴格的訓練，協助我們萃取生命故事， 加入脊損防治的專業知識。
-  希望能借由我的故事，讓更多人了解脊髓損傷、宣導交通安全的重要，避免憾事發生，也讓傷友們能逐漸走出社會</p></div>
+ <div class="ection-heading text-uppercase"><p> 輪椅櫥神
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left"> 我的興趣是烹飪，高職時參加選手培育班，替學校拿了不錯的成績。在我即將步入職場時突然的車禍，把我餐飲主廚的夢想就此打碎。在基金會社工及醫訪員的鼓勵下，參加講師培訓的課程，感謝「啟程管理顧問有限公司」三位老師嚴格的訓練，協助我們萃取生命故事， 加入脊損防治的專業知識。
+  希望能借由我的故事，讓更多人了解脊髓損傷、宣導交通安全的重要，避免憾事發生，也讓傷友們能逐漸走出社會。</p></div>
  </div>
  </div>
  </div>
@@ -284,8 +290,10 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">劉炫成</div>
- <div class="ection-heading text-uppercase"><p>人生就是要有球必應<br>16歲時因心臟手術後遺症，致使下半身癱瘓，在桃園脊髓損傷潛能發展中心復健與生活重建後，重拾信心回到校園。好不容易大學畢業卻被20間公司拒於門外，參加職訓認識脊損傷友習得造型氣球技術。
-  因為親身體會身障者的就業困難，我在考取桃園市、新北市街頭藝人證照後，成立「有球必應社會企業」，協助身障者學習一技之長，找回生活動力。期待講座能帶給大家正面的力量，給傷友們支持與鼓勵!
+ <div class="ection-heading text-uppercase"><p> 人生就是要有球必應
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left">16歲時因心臟手術後遺症，致使下半身癱瘓，在桃園脊髓損傷潛能發展中心復健與生活重建後，重拾信心回到校園。好不容易大學畢業卻被20間公司拒於門外，參加職訓認識脊損傷友習得造型氣球技術。
+  因為親身體會身障者的就業困難，在考取桃園市、新北市街頭藝人證照後，成立「有球必應社會企業」，協助身障者學習一技之長，找回生活動力。期待講座能帶給大家正能量，給傷友們支持與鼓勵!
   </p> </div>
  </div>
  </div>
@@ -303,7 +311,9 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">賴家棚</div>
- <div class="ection-heading text-uppercase"><p>成為更好的自己<br>常聽人說來日方長，卻忘了世事無常。本來喜歡上山下海愛冒險的我，卻因為五年前的一場車禍而改變了生活的一切…。因為自身的經驗，較能體會受傷後身體的不適及神經疼痛感，所以希望能與剛受傷的傷友分享，讓其快速找到正確的復健途徑和觀念，所以我投入了脊損協會志工及醫訪員的工作。
+ <div class="ection-heading text-uppercase"><p> 成為更好的自己
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left">常聽人說來日方長，卻忘了世事無常。本來喜歡上山下海愛冒險的我，因為五年前的一場車禍而改變了生活的一切…。因為自身的經驗，能體會受傷後身體的不適及神經疼痛感，希望能與剛受傷的傷友分享，讓其快速找到正確的復健途徑和觀念，所以我投入了脊損協會志工及醫訪員的工作。
   上帝關了一扇門，必定會再為你開一扇窗。講座可能就是祂指派給我的特別任務，希望能幫助傷友們走出低谷。
   </p>  </div>
  </div>
@@ -322,8 +332,10 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">李蕙伊</div>
- <div class="ection-heading text-uppercase"><p>為母則強<br>主修工業設計系，曾獲《2010年榮獲國際德國紅點設計獎–概念設計獎。》研究所返家路上遭酒駕追撞，致使脊髓損傷…。我熱愛並投身參與身障運動是想間接讓自己的兒子能感受到媽媽無所不能的勇氣與堅強的力量。
-  我創作《扭蛋人生》、《微疼痛》的部落格，希望能透過創作分享自已的經驗與心情。希望能透過講座讓大家認識『脊髓損傷』，讓身障者更融入大眾。
+ <div class="ection-heading text-uppercase"><p> 為母則強
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left"> 主修工業設計系，曾獲《2010年榮獲國際德國紅點設計獎–概念設計獎。》研究所返家路上遭酒駕追撞，致使脊髓損傷…。我熱愛並投身參與身障運動是想間接讓自己的兒子能感受到媽媽無所不能的勇氣與堅強的力量。
+  我創作《扭蛋人生》、《微疼痛》的部落格，希望透過創作分享自已的經驗與心情。希望能透過講座讓大家認識『脊髓損傷』，讓身障者更融入大眾。
   </p>  </div>
  </div>
  </div>
@@ -341,8 +353,10 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">張靜婷</div>
- <div class="ection-heading text-uppercase"><p>人生只有一遍 不能砍掉重練<br>車禍造成頸髓損傷四肢癱瘓至今已15年，回想從一路的徬徨無助到現在的獨立自主，成長蛻變中每一步的探索都是勇氣的累積。
-  由於回歸社會的不適應和環境不友善，看見了自已的社會責任，熱愛學習的我出國習得專業的知識及擔任志工幫助他人，讓我看見存在的價值。期待講座可以提供過來人的經驗，也可以喚起大家對身障者平權的關注，同時可以創造友善的無障礙環境。
+ <div class="ection-heading text-uppercase"><p> 人生只有一遍 不能砍掉重練
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left"> 車禍造成頸髓損傷四肢癱瘓至今已15年，回想從一路的徬徨無助到現在的獨立自主，成長蛻變中每一步的探索都是勇氣的累積。
+  由於回歸社會的不適應和環境不友善，看見了自已的社會責任，熱愛學習的我出國習得專業的知識及擔任志工幫助他人，讓我看見存在的價值。期待講座可以提供過來人的經驗，也可以喚起大家對身障者平權的關注，同時創造友善的無障礙環境。
 </p> </div>
  </div>
  </div>
@@ -361,8 +375,9 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">陳柏勳</div>
- <div class="ection-heading text-uppercase"><p>再造新夢想<br>  以前為了最熱愛的跳舞跟打球可以通宵達旦，熱衷參加學校社團的活動，生活多彩多姿，大四那年出了一場車禍，讓我人生的視角由曾經的180CM變成130CM，復健治療之路漫長且辛苦，還好一路有家人的支持，讓我可以重振作起來。 目前創業經營網路生意，生活豐富又精采!
-  期待講座可以鼓勵大家用不同的視角，去看待不同的事物，用不一樣的方式去接受生命中的各種挑戰!</p> </div>
+ <div class="ection-heading text-uppercase"><p> 再造新夢想
+</p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left">  以前為了最熱愛的跳舞跟打球可以通宵達旦，熱衷學校社團的活動，生活多彩多姿，大四那年出了一場車禍，讓我人生的視角由曾經的180CM變成130CM，復健治療之路漫長辛苦，還好一路有家人的支持，讓我可以重新振作起來。 目前創業經營網路生意，生活豐富又精采!期待講座可以鼓勵大家用不同的視角，看待事物，用不一樣的方式接受生命中的各種挑戰!</p> </div>
  </div>
  </div>
  </div>
@@ -380,7 +395,9 @@
  </a>
  <div class="portfolio-caption">
  <div class="portfolio-caption-heading">陳柔均</div>
- <div class="ection-heading text-uppercase"><p>健康的心靈勝過健全的身體<br>我因早產右腳不便，小時被同學和老師霸凌，10歲後與家人移居南美洲，在當地就學遇到了好的老師和和善的朋友，學會了樂觀與平等互重，不會因外表的殘缺而自卑，後來回台就讀輔大西班牙文系，畢業後在聯合晚報上班、當過口譯員、後來成為國小老師直到退休。
+ <div class="ection-heading text-uppercase"><p> 健康的心靈勝過健全的身體
+  </p> </div>
+ <div class="ection-heading text-uppercase"><p Align="left">我因早產右腳不便，小時被同學和老師霸凌，10歲後與家人移居南美洲，在當地就學遇到了好的老師和和善的朋友，學會了樂觀與平等互重，不會因外表的殘缺而自卑，後來回台就讀輔大西班牙文系，畢業後在聯合晚報上班、當過口譯員、後來成為國小老師直到退休。
   本著活到老學到老的想法，所以參加講師培訓課程，希望在老師的指導下，讓我的生命更加的豐富和精彩，也讓我有回饋社會的機會。
   </p> </div>
  </div>
@@ -400,8 +417,10 @@
    </a>
    <div class="portfolio-caption">
    <div class="portfolio-caption-heading">黃仁祥</div>
-   <div class="ection-heading text-uppercase"><p>把愛傳出去<br> 我曾經在足球場上意氣風發，卻因遭受友人器械攻擊造成頸髓受損，也曾想放棄生命，在家人耐心的的陪伴與打氣，我重拾活下去的勇氣。
-    現在我在桃園潛能發展中心擔任訪視員，很開心透過「友善大使安全講座」講師培訓課程，增進自已演講技巧，整理自已生命故事，讓演講融入自我的風格，希望能透過講座提醒社會大眾了解生命的無常與脆弱、危機是無所不在的，並且珍惜享受這得來不易的生命。
+   <div class="ection-heading text-uppercase"><p> 把愛傳出去
+   </p> </div>
+   <div class="ection-heading text-uppercase"><p Align="left"></p> 我曾經在足球場上意氣風發，卻因遭受友人器械攻擊造成頸髓受損，也曾想放棄生命，在家人耐心的的陪伴與打氣，我重拾活下去的勇氣。
+    現在我在桃園潛能發展中心擔任訪視員，很開心透過「友善大使安全講座」講師培訓課程，增進自已演講技巧，整理自已生命故事，讓演講融入自我的風格，希望能透過講座提醒社會大眾了解生命的無常與脆弱、危機無所不在，並且珍惜享受這得來不易的生命。
     </p> </div>
    </div>
    </div>
@@ -419,7 +438,9 @@
    </a>
    <div class="portfolio-caption">
    <div class="portfolio-caption-heading">陳青琪</div>
-   <div class="ection-heading text-uppercase"><p> 幸福女人<br>周歲罹患小兒麻痺症，醫生宣判終生坐輪椅，開朗雙親一路支持陪伴，讓我在成長過程充滿歡喜感恩。17 歲時遇到了初戀，但因男方家人反對，15年苦戀就此夢碎，後來投入美容事業業，成為銷售VIP。如今和工殤失明的先生擁有一對寶貝兒女，日子過的滿足幸福。
+   <div class="ection-heading text-uppercase"><p> 幸福女人
+  </p> </div>
+   <div class="ection-heading text-uppercase"><p Align="left">周歲罹患小兒麻痺症，醫生宣判終生坐輪椅，開朗雙親一路支持陪伴，讓我在成長過程充滿歡喜感恩。17 歲時遇到了初戀，但因男方家人反對，15年苦戀就此夢碎，後來投入美容事業業，成為銷售VIP。如今和工殤失明的先生擁有一對寶貝兒女，日子過的滿足幸福。
     期待與您分享脊髓損傷的預防知識和我如何在創業打拼、經營婚姻、教養兒女中,走出意想不到的豁達人生,陪伴您找到屬於自己的夢想與力量!
     </p></div>
    </div>
@@ -439,8 +460,10 @@
    </a>
    <div class="portfolio-caption">
    <div class="portfolio-caption-heading">方怡靜</div>
-   <div class="ection-heading text-uppercase"><p> 堅強之心<br> 在受傷前是職業軍人，一次上班的過程中發生了車禍，成雙下肢癱瘓，這對活潑好動的我來說是一個非常大的打擊!!因為購買輪椅和高雄脊損協會的前輩們認識而改變，現在在高雄從事輔具維修及醫訪員的工作。
-    成為一名專業講師不容易，但期許能借由宣導講座的活動讓大家可以重視脊髓損傷的預防工作，少一場意外就會少一個家庭破碎。</p> 
+   <div class="ection-heading text-uppercase"><p> 堅強之心
+  </p> </div>
+   <div class="ection-heading text-uppercase"><p Align="left"> 在受傷前是職業軍人，一次上班的過程中發生了車禍，成雙下肢癱瘓，這對活潑好動的我來說是一個非常大的打擊!因為購買輪椅和高雄脊損協會的前輩們認識而改變，現在在高雄從事輔具維修及醫訪員的工作。成為一名專業講師不容易，期許藉由宣導講座的活動讓大家可以重視脊髓損傷的預防工作，少一場意外就會少一個家庭破碎。
+    </p> 
     </div>
    </div>
    </div>
@@ -488,10 +511,6 @@
  </div>
  </div>
  </div>
- <!-- Contact-->
- </section>
- <div style="background-color: #202428">
- </div>
  
 
 </table>
@@ -507,19 +526,17 @@
 <th> 
 <p align="left"> 
  主辦單位：財團法人脊髓損傷社會福利基金會<br>
- 協辦單位：財團法人桃園巿私立脊髓損傷潛能發展中心<br> 
+  
 </th>
 <th>
  <p align="left"> 
- 贊助單位：國際扶輪第3522地區台北市東豐扶輪社<br>
- <font color="white">------------</font> 香港金融中心扶輪社<br>
+  協辦單位：財團法人桃園巿私立脊髓損傷潛能發展中心<br>
 
 </p> 
  </th> 
  <th>
 <p align="left"> 
-基金會立案字號：北市社團字第10132314900號<br> 
-地址：台北市大同區民權西路136號16樓之6 <br>
+  贊助單位：國際扶輪第3522地區台北市東豐扶輪社/ 香港金融中心扶輪社<br>
 
 </p> 
  </th>
@@ -527,7 +544,9 @@
 </table>
 
 <span> <p><font size="4">活動聯絡窗口：陳社工，電話：(02)2557-9060#14 
-基金會e-mail信箱：scif@scsrc.org.tw </font></p></span>
+  基金會e-mail信箱：higher0118@scsrc.org.tw </font></p></span>
+<span> <p><font size="2">基金會立案字號：北市社團字第10132314900號  地址：台北市大同區民權西路136號16樓之6</font></p></span>
+
  <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2021</div>
 <table> 
  </div>
