--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
  <meta name="description" content="" />
  <meta name="author" content="" />
- <title>友善生命教育脊髓防治講座</title>
+ <title>友善生命教育脊損防治講座</title>
  <!-- Favicon-->
  <link rel="icon" type="image/x-icon" href="assets/小標.png" />
  <!-- Font Awesome icons (free version)-->
@@ -58,7 +58,7 @@
  <section class="page-section" id="services">
  <div class="container">
  <div class="text-center">
- <h2 class="section-heading text-uppercase">友善生命教育脊髓防治講座之介紹及目的</h2>
+ <h2 class="section-heading text-uppercase">友善生命教育脊損防治講座之介紹及目的</h2>
  </div>
  <div class="row text-center">
  <div class="col-md-4">
@@ -84,7 +84,7 @@
  <i class="fas fa-paper-plane fa-stack-1x fa-inverse"></i>
  </span>
  <h4 class="my-3">使勇敢的故事傳唱</h4>
- <p class="text-muted">本會培訓專業的12名生命講師，以自身故事向社會大眾宣傳脊髓防治與分享生命動人精髓，您可透過線上課程或實體分享邀請講師，分享他們的生命故事。</p>
+ <p class="text-muted">本會培訓專業的12名生命講師，以自身故事向社會大眾宣傳脊損防治與分享生命動人精髓，您可透過線上課程或實體分享邀請講師，分享他們的生命故事。</p>
  <p>
 <br><br><br>
  </p>
@@ -99,7 +99,7 @@
  <div class="text-center">
  <h2 class="section-heading text-uppercase"><font color="white">活動前言</font></h2>
  <p class="ection-heading text-uppercase"><font color="white">脊髓損傷患者受傷平均年齡正值壯年(20-40歲)、99%無法治癒，終身都需依賴輪椅或輔具行動，<br>也將因此造成傷友及家庭照顧者生活頓時失序，全家陷入困境中。<br>
-但脊髓損傷是可以預防的，這是我們刻不容緩的工作。<br>而預防脊髓損傷最好的方法就是進行預防宣導的活動，所以我們培養傷友成為講師，<br>進行推廣預防脊髓損傷講座，以傷友們獨特的生命經歷及深刻感受應用在推動宣導活動上，減少脊髓損傷的發生。</font>。
+但脊髓損傷是可以預防的，這是我們刻不容緩的工作。<br>而預防脊髓損傷最好的方法就是進行預防宣導的活動，所以我們培養傷友成為講師，<br>進行推廣預防脊髓損傷講座，以傷友們獨特的生命經歷及深刻感受應用在推動宣導活動上，減少脊髓損傷的發生。</font>
 </p> 
 </table>
 </div>
@@ -148,7 +148,7 @@
  <i class="fas fa-wheelchair fa-stack-1x fa-inverse"></i>
  </span>
  <h4 class="my-3">傷友即講師</h4>
- <p class="text-muted">傷友講師走出人生低谷，更能以正向而生命力的心態面對。<br>即幽默又風趣，內容充實不冷場，臨場感十足。</p>
+ <p class="text-muted">傷友講師走出人生低谷，以正向而有生命力的心態面對<br>即幽默又風趣，內容充實不冷場，臨場感十足。</p>
  <p>
  </td>
  <td>
@@ -492,21 +492,20 @@
  <div class="container">
  <div class="row align-items-center">
 
- <div class="col-md-3 col-sm-6 my-6">
+ <div class="col-md-4 col-sm-6 my-6">
  <h5>主辦單位</h5>
- <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/社會福利基金會logo 橫-01 (2).png" alt="..."  width ="70%" max height="auto"/></a>
+
+ <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/社會福利基金會logo 橫-01 (2).png" alt="..."  width ="60%" max height="auto"/></a>
  </div>
- <div class="col-md-3 col-sm-6 my-6">
+ <div class="col-md-4 col-sm-6 my-6">
    <h5>協辦單位</h5>
-   <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/中心logo標準字.png" alt="..." width ="70%" max height="auto"/></a>
+   <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/中心logo標準字.png" alt="..." width ="60%" max height="auto"/></a>
    </div>
- <div class="col-md-3 col-sm-6 my-6">
+ <div class="col-md-4 col-sm-6 my-6">
  <h5>贊助單位</h5>
- <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/TRF_RGB.png" alt="..."  width ="50%" max height="auto"/></a>
+ <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/TRF.png" alt="..."  width ="50%" max height="auto"/></a>
  </div>
- <div class="col-md-3 col-sm-6 my-6">
- <h5><font color="white">贊助單位</font>  </h5>
- <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/國際扶輪第3522地區台北巿東豐扶輪社.jpg" alt="..." width ="20%" max height="auto" /></a>
+ 
  </div>
  </div>
  </div>
@@ -544,7 +543,7 @@
 </table>
 
 <span> <p><font size="4">活動聯絡窗口：陳社工，電話：(02)2557-9060#14 
-  基金會e-mail信箱：higher0118@scsrc.org.tw </font></p></span>
+  e-mail信箱：higher0118@scsrc.org.tw </font></p></span>
 <span> <p><font size="2">基金會立案字號：北市社團字第10132314900號  地址：台北市大同區民權西路136號16樓之6</font></p></span>
 
  <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2021</div>
